# agentic-clinical-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  2.2.4  Dockerfile  Jenkinsfile  Jenkinsfile.testing  Makefile  PROJECT_OUTLINE.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 994bb987f76a_initial_schema.py
docker/: Dockerfile.api  Dockerfile.worker
docs/: GRAFANA.md  JENKINS.md  JENKINS_ACCESS.md  JENKINS_CREDENTIALS_QUICK_START.md  JENKINS_CREDENTIALS_SETUP.md  JENKINS_DOCKER_SETUP.md  JENKINS_PLUGINS_SETUP.md  JENKINS_TROUBLESHOOTING.md  KUBERNETES.md  PROMETHEUS.md  QUICK_START_JENKINS.md  README.md  STOP_OLD_JENKINS.md  TESTING_JENKINSFILE.md  database-setup.md  phase-1.1-setup.md  phase-1.2-database.md  phase-1.3-vector-databases.md  phase-2-tutorial.md  phase-8-testing-evaluation.md  testing-agents.md
grafana/dashboards/: agent-performance.json  backend-comparison.json  safety-quality.json  sla-health.json
k8s/base/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa-api.yaml  hpa-worker.yaml  ingress.yaml  kustomization.yaml  secrets.yaml.example
k8s/overlays/dev/: deployment-patch.yaml  kustomization.yaml
scripts/: check_port.ps1  create_initial_migration.ps1  create_initial_migration.sh  init_db.py  interactive_agent_test.py  jenkins output.txt  manage_jenkins.ps1  run_api.py  run_beat.py  run_worker.ps1  run_worker.py  run_worker.sh  setup.ps1  setup.sh  start_jenkins.ps1  start_jenkins_alt_port.ps1  stop_old_jenkins.ps1  stop_old_jenkins_admin.ps1  test_agents.py  test_jenkinsfile.ps1  test_jenkinsfile.sh
scripts/ci/: check_citations.py  check_phi_leakage.py  nightly_evaluation.sh
scripts/eval/: benchmark_backends.py  run_offline_eval.py
src/agentic_clinical_assistant/: __init__.py  config.py
src/agentic_clinical_assistant/agents/: README.md  __init__.py
src/agentic_clinical_assistant/agents/intake/: __init__.py  agent.py  models.py
src/agentic_clinical_assistant/agents/retrieval/: __init__.py  agent.py  models.py
src/agentic_clinical_assistant/agents/synthesis/: __init__.py  agent.py  models.py
src/agentic_clinical_assistant/agents/verifier/: __init__.py  agent.py  models.py
src/agentic_clinical_assistant/api/: README.md  __init__.py  main.py
src/agentic_clinical_assistant/api/middleware/: __init__.py  cors.py  logging.py
src/agentic_clinical_assistant/api/routes/: __init__.py  agent.py  memory.py  metrics.py  tools.py  workers.py
src/agentic_clinical_assistant/database/: README.md  __init__.py  audit.py  base.py  session.py
src/agentic_clinical_assistant/memory/: README.md  __init__.py  policy.py  session.py
src/agentic_clinical_assistant/metrics/: README.md  __init__.py  collector.py
src/agentic_clinical_assistant/tools/: README.md  __init__.py  core.py  registry.py  workflow.py
src/agentic_clinical_assistant/tools/workers/: __init__.py  core.py
src/agentic_clinical_assistant/vector/: README.md  __init__.py  base.py  embeddings.py  faiss_adapter.py  manager.py  pinecone_adapter.py  weaviate_adapter.py
src/agentic_clinical_assistant/workers/: README.md  __init__.py  celery_app.py  health.py
src/agentic_clinical_assistant/workers/tasks/: __init__.py  agent.py  evaluation.py  ingestion.py
src/agentic_clinical_assistant/workflow/: README.md  __init__.py  engine.py  executor.py  state.py
tests/: __init__.py  test_agents.py  test_api.py  test_database.py  test_example.py  test_tools.py  test_workflow.py
tests/contract/: test_schema_consistency.py
tests/integration/: test_workflow.py
tests/smoke/: __init__.py  test_smoke.py
